--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- home -->
     <div class="title">
-        <a href="./index1.html"><img class="logo" src="./img/logo.png"></a>
+        <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
     </div>
     <div class="num1">
         <a href="./num1.html"><img class="num1" src="./img/1.png"></a>
