--- a/num3.html
+++ b/num3.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="title">
-        <a href="./index1.html"><img class="logo" src="./img/logo.png"></a>
+        <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
     </div>
 
     <!-- 스크롤 버튼 -->
@@ -22,7 +22,7 @@
     <div class="menu" id="menuWrapper">
         <a id="menuBtn"><img class="menubutton" src="./img/10.png"></a>
         <div id="menuContent" class="dropdown-content">
-            <a class="menu-list" href="./index1.html">Home</a>
+            <a class="menu-list" href="./index.html">Home</a>
             <a class="menu-list" href="./num1.html">학교 홍보영상</a>
             <a class="menu-list" href="./num2.html">달력</a>
             <a class="menu-list" href="./num3.html">굿즈</a>
