--- a/num2.html
+++ b/num2.html
@@ -23,6 +23,13 @@
           <img src="./img/달력/4.jpg" alt="이미지 3">
           <img src="./img/달력/5.jpg" alt="이미지 3">
           <img src="./img/달력/6.jpg" alt="이미지 3">
+          <img src="./img/달력/7.jpg" alt="이미지 3">
+          <img src="./img/달력/8.jpg" alt="이미지 3">
+          <img src="./img/달력/9.jpg" alt="이미지 3">
+          <img src="./img/달력/10.jpg" alt="이미지 3">
+          <img src="./img/달력/11.jpg" alt="이미지 3">
+          <img src="./img/달력/12.jpg" alt="이미지 3">
+          <img src="./img/달력/13.jpg" alt="이미지 3">
         </div>
       </div>
       <script src="script.js"></script>
