--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <!-- home -->
+    <div class="poster">
+        <a><img class="poster" src="./img/poster.png"></a>
+    </div>
     <div class="title">
         <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
     </div>
