--- a/index.html
+++ b/index.html
@@ -10,30 +10,36 @@
 </head>
 <body>
     <!-- home -->
-    <div class="poster">
-        <a><img class="poster" src="./img/poster.png"></a>
+    <div class="container">
+        <div class="title">
+            <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
+        </div>
+        <div class="poster">
+            <a><img class="poster" src="./img/poster.png"></a>
+        </div>
+        <div class="num-container">
+            <div class="num1">
+                <a href="./num1.html"><img class="num-img" src="./img/1.png"></a>
+            </div>
+            <div class="num1">
+                <a href="./num2.html"><img class="num-img" src="./img/2.png"></a>
+            </div>
+            <div class="num1">
+                <a href="./num3.html"><img class="num-img" src="./img/3.png"></a>
+            </div>
+            <div class="num1">
+                <a href="./num4.html"><img class="num-img" src="./img/4.png"></a>
+            </div>
+            <div class="num1">
+                <a href="./num5.html"><img class="num-img" src="./img/5.png"></a>
+            </div>
+            <div class="num1">
+                <a href="./num6.html"><img class="num-img" src="./img/6.png"></a>
+            </div>
+        </div>
     </div>
-    <div class="title">
-        <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
-    </div>
-    <div class="num1">
-        <a href="./num1.html"><img class="num1" src="./img/1.png"></a>
-    </div>
-    <div class="num1">
-        <a href="./num2.html"><img class="num1" src="./img/2.png"></a>
-    </div>
-    <div class="num1">
-        <a href="./num3.html"><img class="num1" src="./img/3.png"></a>
-    </div>
-    <div class="num1">
-        <a href="./num4.html"><img class="num1" src="./img/4.png"></a>
-    </div>
-    <div class="num1">
-        <a href="./num5.html"><img class="num1" src="./img/5.png"></a>
-    </div>
-    <div class="num1">
-        <a href="./num6.html"><img class="num1" src="./img/6.png"></a>
-    </div>
+    
+    
 
     <!-- 스크롤 버튼 -->
     <div class="stb" id="scrollBtnContainer">
