--- a/num3.html
+++ b/num3.html
@@ -12,6 +12,9 @@
     <div class="title">
         <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
     </div>
+    <div class="info3">
+        <a><img class="info3" src="./img/info/굿즈 상페.png"></a>
+    </div>
 
     <!-- 스크롤 버튼 -->
     <div class="stb" id="scrollBtnContainer">
