--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <a href="./num6.html"><img class="num-img" src="./img/6.png"></a>
             </div>
         </div>
+        <div>
+            <a><img class="bottom-img" src="./img/bottom.png"</a>
+        </div>
     </div>
     
     
