--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div class="num1">
                 <a href="./num6.html"><img class="num-img" src="./img/6.png"></a>
             </div>
-        </div>
-        <div>
-            <a><img class="bottom-img" src="./img/bottom.png"</a>
+            <div>
+                <a><img class="bottom-img" scr="./img/bottom.png"></a>
+            </div>
         </div>
     </div>
     
