--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             </div>
             <div class="num1">
                 <a href="./num6.html"><img class="num-img" src="./img/6.png"></a>
-            </div>
-            <div>
-                <a><img class="bottom-img" scr="./img/bottom.png"></a>
-            </div>
+            </div> 
         </div>
+    </div>
+    <div>
+        <a><img class="bottom-img" src="./img/bottom.png"></a>
     </div>
     
     
