--- a/num2.html
+++ b/num2.html
@@ -12,6 +12,9 @@
     <div class="title">
         <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
     </div>
+    <div class="top-img">
+        <a><img class="top-img" src="./img/info/달력 상단.png"></a>
+    </div>
 
     <!-- 달력 -->
     <div class="slider-container">
@@ -33,6 +36,10 @@
         </div>
       </div>
       <script src="script.js"></script>
+
+      <div>
+        <a><img class="info2" src="./img/info/달력 상페.png"></a>
+    </div>
 
     <script src="script.js"></script>
 
