--- a/num4.html
+++ b/num4.html
@@ -12,10 +12,18 @@
     <div class="title">
         <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
     </div>
+    <div class="top-img">
+        <a><img class="top-img" src="./img/info/아박 상단.png"></a>
+    </div>
 
     <div>
         <img class="gif" src="./img/gif.gif">
     </div>
+
+    <div>
+        <a><img class="info4" src="./img/info/아박 상페.png"></a>
+    </div>
+
     <!-- 스크롤 버튼 -->
     <div class="stb" id="scrollBtnContainer">
         <button onclick="scrollToBottom()" id="scrollBtn" title="scrollToBottom">하단으로</button>
