--- a/num5.html
+++ b/num5.html
@@ -12,7 +12,10 @@
     <div class="title">
         <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
     </div>
-    
+    <div>
+        <a><img class="info5" src="./img/info/정원 상페.png"></a>
+    </div>
+
     <!-- 스크롤 버튼 -->
     <div class="stb" id="scrollBtnContainer">
         <button onclick="scrollToBottom()" id="scrollBtn" title="scrollToBottom">하단으로</button>
