--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
             </div>
             <div class="num1">
                 <a href="./num6.html"><img class="num-img" src="./img/6.png"></a>
+            </div>
+            <div class="img7">
+                <a href="./num7.html"><img class="img7" src="./img/7.png"></a>
             </div> 
         </div>
+        
     </div>
     <div>
         <a><img class="bottom-img" src="./img/bottom.png"></a>
