--- a/num7.html
+++ b/num7.html
@@ -20,7 +20,7 @@
     </div>
 
     <div>
-        <a><img class="info1" src="./img/info/홍동상페.png"></a>
+        <a><img class="credit" src="./img/info/크레딧.png"></a>
     </div>
     <div>
         <a><img class="bottom-img" src="./img/bottom.png"></a>
