--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <a class="menu-list" href="./num4.html">아크릴박스</a>
             <a class="menu-list" href="./num5.html">정원</a>
             <a class="menu-list" href="./num6.html">철토끼</a>
+            <a class="menu-list" href="./num7.html">크레딧</a>
         </div>
     </div>
     <script src="script.js"></script>
