--- a/num6.html
+++ b/num6.html
@@ -12,6 +12,9 @@
     <div class="title">
         <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
     </div>
+    <div>
+        <a><img class="info6" src="./img/info/철토끼 상페.png"></a>
+    </div>
 
     <!--- 메뉴 버튼 -->
     <div class="menu" id="menuWrapper">
