--- a/num6.html
+++ b/num6.html
@@ -13,7 +13,7 @@
         <a href="./index.html"><img class="logo" src="./img/logo.png"></a>
     </div>
     <div>
-        <a><img class="info6" src="./img/info/철토끼 상페.png"></a>
+        <a><img class="info6" src="./img/info/철토끼 상페.jpge"></a>
     </div>
 
     <!--- 메뉴 버튼 -->
